Cuerpos de vibora ahora son una lista enlazada.